force-app/main/default/objects/Apttus__AgreementEvent__e/Apttus__AgreementEvent__e.object-meta.xml
<CustomObject>
    <description>Agreement lifecycle event</description>
    <label>Agreement Event</label>
    <pluralLabel>Agreement Events</pluralLabel>
</CustomObject>