force-app/main/default/objects/Apttus__AgreementEvent__e/fields/Apttus__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementId__c</fullName>
    <description>Agreement Id</description>
    <label>Agreement Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>