force-app/main/default/objects/Apttus__AgreementEvent__e/fields/Apttus__ContextId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContextId__c</fullName>
    <description>Other Record Id used for current context</description>
    <label>Context Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>