force-app/main/default/objects/Apttus__AgreementEvent__e/fields/Apttus__DocumentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentId__c</fullName>
    <description>Document Id</description>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>