force-app/main/default/objects/Apttus__AgreementEvent__e/fields/Apttus__DocumentName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentName__c</fullName>
    <description>Document Name</description>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>