force-app/main/default/objects/Apttus__AgreementEvent__e/fields/Apttus__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ErrorMessage__c</fullName>
    <description>Error Message</description>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>