force-app/main/default/objects/Apttus__AgreementEvent__e/fields/Apttus__SuccessMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus__SuccessMessage__c</fullName>
    <description>Success Message</description>
    <label>Success Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>