force-app/main/default/objects/Apttus__AgreementEvent__e/fields/Apttus__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Type__c</fullName>
    <description>Type</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>