force-app/main/default/objects/Apttus__AgreementEvent__e/fields/Apttus__WarningMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WarningMessage__c</fullName>
    <description>Warning Message</description>
    <label>Warning Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>